refactor: Collectors.toList()→.toList()とget(0)→getFirst()のJava 21イディオム統一 (#1312)
- 17ファイルのCollectors.toList()を.toList()に置換
- 不要になったCollectorsインポートを14ファイルから削除
- GetScoreTrendUseCase: get(0)→getFirst(), get(size-1)→getLast()

Co-authored-by: Claude Opus 4.6 <noreply@anthropic.com>