@@ -1,7 +1,6 @@
 package com.example.FreStyle.usecase;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -24,6 +23,6 @@ public class GetReportListUseCase {
         return learningReportRepository.findByUserIdOrderByYearDescMonthDesc(userId)
                 .stream()
                 .map(learningReportMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
